# GSOC_RTEMS_ARINC653

./: README.md
POK/tests/arinc653-manual-blackboard/: model.aadl  send.c
POK/tests/arinc653-manual-partition/: model.aadl  send.c
RTEMS/: Makefile.am  init.c  linkcmds_WORKS
patches/: arinc653_readme  hello_init_c.patch  libpok_rtems_arinc653.patch  rtems-guest_rtems_arinc653.patch  virtualpok_arinc653.patch
